# thermal_printer_flutter

./: CHANGELOG.md  CLAUDE.md  README.md  pubspec.yaml  references.md
.github/workflows/: ci.yml
android/src/main/kotlin/com/example/thermal_printer_flutter/: ThermalPrinterFlutterPlugin.kt
example/lib/: main.dart
example/lib/src/: test_print.dart
example/macos/Runner/: DebugProfile.entitlements  Release.entitlements
example/macos/Runner.xcodeproj/: project.pbxproj
ios/: thermal_printer_flutter.podspec
ios/Classes/: SwiftThermalPrinterFlutterPlugin.swift
lib/: thermal_printer_flutter.dart  thermal_printer_flutter_method_channel.dart  thermal_printer_flutter_platform_interface.dart  thermal_printer_flutter_web.dart
lib/src/: network_printer.dart
lib/src/enums/: printer_type.dart
lib/src/models/: printer.dart  printer_status.dart
lib/src/repositories/: bluetooth_printer_repository.dart  network_printer_repository.dart  usb_printer_repository.dart
lib/src/services/: screenshot.dart
lib/src/web/: byte_chunker.dart  web_bluetooth.dart  web_diag.dart  web_usb.dart
macos/: thermal_printer_flutter.podspec
macos/Classes/: CupsPrinter.h  CupsPrinter.m  ThermalPrinterFlutterPlugin.swift
test/: bluetooth_printer_repository_test.dart  byte_chunker_test.dart  coverage_completion_test.dart  network_printer_repository_test.dart  network_printer_test.dart  platform_helper_test.dart  printer_status_test.dart  printer_test.dart  screenshot_test.dart  thermal_printer_flutter_method_channel_test.dart  thermal_printer_flutter_test.dart  usb_printer_repository_test.dart
windows/: CMakeLists.txt  thermal_printer_flutter_plugin.cpp  thermal_printer_flutter_plugin.h
